# diskspace-insight

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: home.rs  scan_kernel.rs
spaced/: Cargo.toml
spaced/src/: main.rs
src/: lib.rs  tests.rs
