[package]
name = "diskspace_insight"
version = "0.1.6"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Investigate where your diskspace has gone"
keywords = ["disk", "utility", "diskspace"]
repository = "https://github.com/woelper/diskspace-insight"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# jwalk = "0.5.1"
walkdir = "2.3.1"
rayon = "1.5.0"
log = "0.4.11"
env_logger = "0.8.1"
bytesize = "1.0.1"


[[bench]]
name = "home"
harness = false

# [[bench]]
# name = "scan_kernel"
# harness = false

[dev-dependencies]
criterion = "0.3.3"
unzip = "0.1.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
# benchmark_sampledata = {path = "../benchmark_sampledata"}
benchmark_sampledata = "0.1.5"
dirs = "3.0.1"