[package]
name = "diskspace_insight"
version = "0.1.92"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Investigate where your diskspace has gone"
keywords = ["disk", "utility", "diskspace"]
repository = "https://github.com/woelper/diskspace-insight"

[dependencies]
# jwalk = "0.5.1"
walkdir = "2.3"
rayon = "1.5"
log = "0.4.14"
env_logger = "0.9.0"
bytesize = "1.1.0"
zip = "0.5"


[[bench]]
name = "home"
harness = false

# [[bench]]
# name = "scan_kernel"
# harness = false

[dev-dependencies]
criterion = "0.3.3"
unzip = "0.1.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
# benchmark_sampledata = {path = "../benchmark_sampledata"}
benchmark_sampledata = "0.1.5"
dirs = "3.0.1"