[package]
name = "spaced"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { path = "../../egui/egui"}
# egui = { path = "../../egui/egui", features = ["serde"] }
egui_glium = { path = "../../egui/egui_glium" }
diskspace_insight = { path = "../" }
dirs = "*"

# serde = { version = "1", features = ["derive"] }

# egui = { path = "../egui", features = ["serde"] }
# egui = "0.1.4"
# egui_glium = "0.1.3"
#serde = { version = "1", features = ["derive"] }




#git@github.com:emilk/egui.git